--- a/assets/css/select.css
+++ b/assets/css/select.css
@@ -10,6 +10,6 @@ select{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
 	overflow: visible;
 }
